# RoboDogFetch

./: README.md
RoboDog/catkin_ws/devel/: .catkin  local_setup.sh
RoboDog/catkin_ws/src/: README.dataset.txt  README.roboflow.txt  data.yaml
RoboDog/catkin_ws/src/A_algo/: dynamic_path_planning.py
RoboDog/catkin_ws/src/ball_detection/: CMakeLists.txt  package.xml
RoboDog/catkin_ws/src/ball_detection/scripts/: ball_detection_node.py  object_detection.py
RoboDog/catkin_ws/src/grid_mapping/: grid_formation.py
RoboDog/catkin_ws/src/my_rtabmap_launch/: CMakeLists.txt
RoboDog/catkin_ws/src/robot_control/: go1_control_node.py
RoboDog/catkin_ws/src/yolo_ball_tracking/: CMakeLists.txt  package.xml
RoboDogFetch-master/devel/: .catkin
RoboDogFetch-master/devel/include/object_detection/: TargetInfo.h
RoboDogFetch-master/devel/lib/pkgconfig/: input_camera.pc  object_detection.pc  path_planning.pc  robot_control.pc  slam_package.pc
RoboDogFetch-master/install_isolated/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
RoboDogFetch-master/install_isolated/include/path_planning/: TargetInfo.h
RoboDogFetch-master/install_isolated/lib/pkgconfig/: input_camera.pc  object_detection.pc  path_planning.pc  (+11 more)
RoboDogFetch-master/launch/: rtabmap_with_camera.launch
RoboDogFetch-master/src/input_camera/: CMakeLists.txt  package.xml
RoboDogFetch-master/src/launch/: all_node.launch
RoboDogFetch-master/src/object_detection/: CMakeLists.txt  package.xml
RoboDogFetch-master/src/path_planning/: CMakeLists.txt
RoboDogFetch-master/src/slam_package/: CMakeLists.txt
(+706 files in other folders)
